Changed accent color

--- a/src/assets/base.sass
+++ b/src/assets/base.sass
@@ -7,8 +7,8 @@
 
 body
     min-height: 100vh
-    color: var(--darkGreen)
-    background: var(--lightGreen)
+    color: var(--accent-dark-4)
+    background: var(--accent-light-4) 
     transition: color 0.5s, background-color 0.5s
     line-height: 1.6
     font-family: 'Work Sans', sans-serif
@@ -22,3 +22,12 @@ body
     --lightGreen: #d9f6ef
     --white: #ffffff
     --black: #000000
+    --accent: #16DB65
+    --accent-dark-1: #12af51
+    --accent-dark-2: #0d833d
+    --accent-dark-3: #095828
+    --accent-dark-4: #042c14
+    --accent-light-1: #45e284
+    --accent-light-2: #73e9a3
+    --accent-light-3: #a2f1c1
+    --accent-light-4: #d0f8e0
