--- a/src/assets/base.sass
+++ b/src/assets/base.sass
@@ -16,6 +16,7 @@ body
     text-rendering: optimizeLegibility
     -webkit-font-smoothing: antialiased
     -moz-osx-font-smoothing: grayscale
+/* @link https://utopia.fyi/type/calculator?c=320,18,1.2,1240,20,1.25,5,3,&s=0.75|0.5|0.25,1.5|2|3|4|6,s-l&g=s,l,xl,12 */
 
 :root
     --darkGreen: #002E33
@@ -31,3 +32,14 @@ body
     --accent-light-2: #73e9a3
     --accent-light-3: #a2f1c1
     --accent-light-4: #d0f8e0
+    --blue: #00b4d8
+
+    --font-3: clamp(0.64rem, calc(0.66rem + -0.02vw), 0.65rem)
+    --font-2: clamp(0.78rem, calc(0.77rem + 0.03vw), 0.80rem)
+    --font-1: clamp(0.94rem, calc(0.92rem + 0.11vw), 1.00rem)
+    --font0: clamp(1.13rem, calc(1.08rem + 0.22vw), 1.25rem)
+    --font1: clamp(1.35rem, calc(1.28rem + 0.37vw), 1.56rem)
+    --font2: clamp(1.62rem, calc(1.50rem + 0.58vw), 1.95rem)
+    --font3: clamp(1.94rem, calc(1.77rem + 0.87vw), 2.44rem)
+    --font4: clamp(2.33rem, calc(2.08rem + 1.25vw), 3.05rem)
+    --font5: clamp(2.80rem, calc(2.45rem + 1.77vw), 3.82rem)
